--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /QuanLyNhaHang/target/
+/QuanLyNhaHang/.idea/
+/QuanLyNhaHang/QuanLyNhaHang.iml
+/QuanLyNhaHang/lib/
+/QuanLyNhaHang/src/test/
